# event-dispatcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  test.py
.github/actions/install-deps/: action.yml
.github/workflows/: code-quality.yml  qc.yml  test.yml
src/dispatcher/: ABC.py  __init__.py  _pubsub.py  async_amqp_dispatcher.py  async_base_dispatcher.py  async_in_memory_dispatcher.py  async_redis_dispatcher.py  base_dispatcher.py  context_var_wrapper.py  event_handler.py  exceptions.py  in_memory_dispatcher.py  kombu_dispatcher.py  redis_dispatcher.py  serializer.py  template.py  utils.py
tests/: test_abc.py  test_in_memory.py
