[project]
name = "ouranos"
version="0.1.0"
description = "An event dispatcher for Python"
authors = [
    {name = "Valentin Ambroise", email = "valentin.ambroise@outlook.com"}
]
requires-python = ">=3.7"
license = {file = "LICENSE"}

[project.optional-dependencies]
test = [
    "pytest~=7.1.2"
]

[project.urls]
repository  = "https://gitlab.com/eupla/dispatcher"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
