[project]
name = "event-dispatcher"
description = "An event dispatcher for Python"
authors = [
    {name = "Valentin Ambroise", email = "valentin.ambroise@outlook.com"}
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "coverage~=7.6",
    "pytest~=8.1",
    "pytest-asyncio~=1.0",
]

[project.urls]
repository  = "https://gitlab.com/eupla/dispatcher"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "dispatcher.__version__"}

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
